# Sumcheck

./: Cargo.toml
src/: error.rs  lib.rs
src/naive_sumcheck/: mod.rs  test.rs
src/naive_sumcheck/protocol/: mod.rs  prover.rs  verifier.rs
