[package]
name = "sumcheck"
version = "0.1.0"
authors = ["Dimitris Papachristoudis"]
edition = "2021"

[dependencies]
ark-ff = { version = "^0.4.0", features = [ "std" ] }
ark-ec = { version = "^0.4.0", features = [ "std" ] }
ark-poly = { version = "^0.4.0", features = [ "std" ] }
ark-serialize = { version = "^0.4.0", features = [ "std" ] }
ark-std = { version = "^0.4.0", features = [ "std" ] }
ark-bls12-381 = { version = "^0.4.0", features = [ "std" ] }
rand = "^0.8"

[profile.release]
opt-level = 3
